Fixes spacing issue

--- a/subscription_manager/static/styles/main.css
+++ b/subscription_manager/static/styles/main.css
@@ -661,11 +661,15 @@ main.manager {
 
 #plans {
   padding: 0;
-  margin: 0; }
+  margin: 2em 0 0 0; }
   #plans li {
     list-style: none; }
   #plans .plan {
     padding: 2em 0; }
+    #plans .plan:first-child {
+      padding-top: 0; }
+    #plans .plan:last-child {
+      padding-bottom: 0; }
     #plans .plan:not(:last-child) {
       border-bottom: solid 1px rgba(3, 3, 3, 0.25); }
 
