--- a/subscription_manager/static/styles/scss/pages/_subscription.scss
+++ b/subscription_manager/static/styles/scss/pages/_subscription.scss
@@ -7,7 +7,7 @@
 
 #plans {
   padding: 0;
-  margin: 0;
+  margin: 2em 0 0 0;
 
   li {
     list-style: none;
@@ -15,6 +15,13 @@
 
   .plan {
     padding: 2em 0;
+
+    &:first-child {
+      padding-top: 0;
+    }
+    &:last-child {
+      padding-bottom: 0;
+    }
 
     &:not(:last-child) {
       border-bottom: solid 1px rgba($black, .25);
